objects/PMC_CPQ_SalesRegionRangeSetting__mdt.object
<CustomObject>
    <description>This is to configure Sales Region ranges.</description>
    <fields>
        <fullName>PMC_CPQ_EndValue__c</fullName>
        <description>End Value of the Sales Region range</description>
        <inlineHelpText>End value is included in range.</inlineHelpText>
        <label>End Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                    <isActive>false</isActive>
                    <label>Canada</label>
                </value>
                <value>
                    <fullName>US</fullName>
                    <isActive>false</isActive>
                    <label>US</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_StartValue__c</fullName>
        <description>Start value of the Sales Region Range.</description>
        <inlineHelpText>Start value is included in range.</inlineHelpText>
        <label>Start Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Region Range Setting</label>
    <pluralLabel>Sales Region Range Settings</pluralLabel>
</CustomObject>